After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 738838 - videobox: critical error when element properties set as max/min
videobox: critical error when element properties set as max/min
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
unspecified
Other Linux
: Normal normal
: 1.5.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-10-20 06:27 UTC by Vineeth
Modified: 2014-10-24 13:30 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
proposed patch (1.15 KB, patch)
2014-10-20 06:29 UTC, Vineeth
committed Details | Review

Description Vineeth 2014-10-20 06:27:54 UTC
In case of videobox element,
left, right, top, bottom can be set from range of -2147483648 to 2147483647
when i launch the videobox element with that values, it gives a critical error

(gst-check-1.0:29869): GStreamer-CRITICAL **: gst_value_set_int_range_step: assertion 'start < end' failed
This happens because min cannot be equal to max. 
Hence adding a condition for the same
Comment 1 Vineeth 2014-10-20 06:29:26 UTC
Created attachment 288880 [details] [review]
proposed patch
Comment 2 Vineeth 2014-10-20 06:31:53 UTC
There are errors in launching when the element properties are set outside the range of video dimensions.
Not sure if we should let application handle it, or we should eliminate the same from videobox element. Please advice on these scenarios.
Comment 3 Sebastian Dröge (slomo) 2014-10-20 10:54:18 UTC
commit 1131db8c1f6b096dfa9737e2fb3cc7f904104b1b
Author: Vineeth T M <vineeth.tm@samsung.com>
Date:   Mon Oct 20 11:57:38 2014 +0530

    videobox: critical error when element properties set as max/min
    
    left, right, top, bottom can be set from range of -2147483648 to 2147483647
    when i launch the videobox element with that values, it gives a critical error
    
    (gst-check-1.0:29869): GStreamer-CRITICAL **: gst_value_set_int_range_step: assertion 'start < end' failed
    This happens because min cannot be equal to max.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=738838
Comment 4 Luis de Bethencourt 2014-10-24 13:30:39 UTC
Thanks for merging this Sebastian :)